--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,14 +3,14 @@
     android:layout_height="match_parent"
     android:background="@android:color/black">
 
-    <com.github.johnpersano.jenkins.visualizer.VisualizerView
+    <com.github.johnpersano.benson.visualizer.VisualizerView
         android:id="@+id/visualizer_view"
         android:layout_width="720dp"
         android:layout_height="720dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
-    <com.github.johnpersano.jenkins.views.AnimatedTextView
+    <com.github.johnpersano.benson.views.AnimatedTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="72dp"
