--- a/app/src/main/res/layout/activity_benson.xml
+++ b/app/src/main/res/layout/activity_benson.xml
@@ -3,12 +3,12 @@
     android:layout_height="match_parent"
     android:background="@android:color/black">
 
-    <com.github.johnpersano.benson.visualizer.VisualizerView
+    <com.github.johnpersano.benson.views.visualizer.VisualizerView
         android:id="@+id/visualizer_view"
         android:layout_width="720dp"
         android:layout_height="720dp"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"/>
 
     <com.github.johnpersano.benson.views.AnimatedTextView
         android:layout_width="match_parent"
@@ -22,6 +22,5 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
-
 
 </RelativeLayout>
